include_directories(.)

add_subdirectory(chap01)
add_subdirectory(chap02)
add_subdirectory(chap03)
add_subdirectory(chap04)
add_subdirectory(chap05)
add_subdirectory(chap06)
add_subdirectory(chap07)
add_subdirectory(chap08)
add_subdirectory(chap09)

add_subdirectory(chap11)
add_subdirectory(chap12)
add_subdirectory(chap13)
add_subdirectory(chap14)
add_subdirectory(chap15)
add_subdirectory(chap16)
add_subdirectory(chap17)
add_subdirectory(chap18)
add_subdirectory(chap19)

add_subdirectory(chap21)
add_subdirectory(chap22)
add_subdirectory(chap23)
add_subdirectory(chap24)
add_subdirectory(chap25)
add_subdirectory(chap26)
add_subdirectory(chap27)
add_subdirectory(chap28)
add_subdirectory(chap29)

add_subdirectory(chap31)
add_subdirectory(chap32)
add_subdirectory(chap33)
add_subdirectory(chap34)
add_subdirectory(chap35)
add_subdirectory(chap36)
add_subdirectory(chap37)
add_subdirectory(chap38)
add_subdirectory(chap39)

add_subdirectory(chap41)
add_subdirectory(chap42)
add_subdirectory(chap43)
add_subdirectory(chap44)
add_subdirectory(chap45)
add_subdirectory(chap46)
add_subdirectory(chap47)
add_subdirectory(chap48)
add_subdirectory(chap49)

add_subdirectory(chap51)
add_subdirectory(chap52)
add_subdirectory(chap53)
add_subdirectory(chap54)
add_subdirectory(chap55)
add_subdirectory(chap56)
add_subdirectory(chap57)
add_subdirectory(chap58)
add_subdirectory(chap59)

add_subdirectory(chap61)
add_subdirectory(chap62)
add_subdirectory(chap63)
add_subdirectory(chap64)
add_subdirectory(chap65)
add_subdirectory(chap66)
add_subdirectory(chap67)
add_subdirectory(chap68)
add_subdirectory(chap69)

add_subdirectory(chap71)
add_subdirectory(chap72)
add_subdirectory(chap73)
add_subdirectory(chap74)
add_subdirectory(chap75)
add_subdirectory(chap76)
add_subdirectory(chap77)
add_subdirectory(chap78)
add_subdirectory(chap79)

add_subdirectory(chap81)
add_subdirectory(chap82)
add_subdirectory(chap83)
add_subdirectory(chap84)
add_subdirectory(chap85)
add_subdirectory(chap86)
add_subdirectory(chap87)
add_subdirectory(chap88)
add_subdirectory(chap89)
