add_executable(list0401 list0401.cpp)
add_executable(list0402 list0402.cpp)
add_executable(list0403 list0403.cpp)
add_executable(list0404 list0404.cpp)
add_executable(list0405 list0405.cpp)
add_executable(list0406 list0406.cpp)
add_executable(snip0401 snip0401.cpp)
add_executable(snip0402 snip0402.cpp)
add_executable(snip0403 snip0403.cpp)
add_executable(snip0404 snip0404.cpp)
add_executable(snip0405 snip0405.cpp)
run_test(list0401)
run_test(list0402)
run_test(list0403)
run_test(list0404)
run_test(list0405)
run_test(snip0401)
run_test(snip0402)
run_test(snip0403)
run_test(snip0404)
run_test(snip0405)
