add_executable(list0802 list0802.cpp)
add_executable(list0803 list0803.cpp)
add_executable(list0804 list0804.cpp)
add_executable(list0805 list0805.cpp)
add_executable(list0806 list0806.cpp)
add_executable(list0807 list0807.cpp)
add_executable(snip0801 snip0801.cpp)
run_test(list0802)
run_test(list0803)
run_test(list0804)
run_test(list0805)
run_test(list0806)
run_test(list0807)
run_test(snip0801)
