add_executable(list1101 list1101.cpp)
add_executable(snip1101 snip1101.cpp)
add_executable(snip1102 snip1102.cpp)
add_executable(snip1103 snip1103.cpp)
add_executable(snip1104 snip1104.cpp)
add_executable(snip1105 snip1105.cpp)
run_test(list1101)
run_test(snip1101)
run_test(snip1102)
run_test(snip1103)
run_test(snip1104)
run_test(snip1105)
