add_executable(list1201 list1201.cpp)
add_executable(list1202 list1202.cpp)
add_executable(list1205 list1205.cpp)
add_executable(list1206 list1206.cpp)
add_executable(snip1201 snip1201.cpp)
add_executable(snip1202 snip1202.cpp)
run_test(list1201)
run_test(list1202)
run_test(list1205)
run_test(list1206)
run_test(snip1201)
run_test(snip1202)
