add_executable(list1301 list1301.cpp)
add_executable(list1302 list1302.cpp)
add_executable(list1303 list1303.cpp)
add_executable(list1304 list1304.cpp)
add_executable(snip1303 snip1303.cpp)
add_executable(snip1304 snip1304.cpp)
add_executable(snip1306 snip1306.cpp)
run_test(list1301)
run_test(list1302)
run_test(list1303)
run_test(list1304)
run_test(snip1303)
run_test(snip1304)
run_test(snip1306)
