add_executable(list4201 list4201.cpp)
add_executable(list4202 list4202.cpp)
add_executable(list4203 list4203.cpp)
add_executable(list4204 list4204.cpp)
add_executable(list4205 list4205.cpp)
add_executable(list4206 list4206.cpp)
add_executable(list4207 list4207.cpp)
add_executable(list4208 list4208.cpp)
add_executable(list4209 list4209.cpp)
add_executable(list4210 list4210.cpp)
add_executable(list4211 list4211.cpp)
add_executable(list4212 list4212.cpp)
add_executable(list4213 list4213.cpp)
add_executable(snip4203 snip4203.cpp)
run_test(list4201)
run_test(snip4203)
