add_executable(list4501 list4501.cpp)
add_executable(list4504 list4504.cpp)
add_executable(list4506 list4506.cpp)
add_executable(list4507 list4507.cpp)
add_executable(list4508 list4508.cpp)
add_executable(list4509 list4509.cpp)
add_executable(list4510 list4510.cpp)
add_executable(list4511 list4511.cpp)
add_executable(list4512 list4512.cpp)
add_executable(list4513 list4513.cpp)
run_test(list4501)
run_test(list4504)
run_test(list4507)
